selfhost/test/typechecker/indexing/string_error_range_non_int.2.out
Error at %FILE_NAME%:2:7
Type mismatch
  |  str[1:2.2]
           ^
Expected: Int
but instead found: Float
